# nyctraincal

./: Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: convert_pb_to_ics.rs  fetch_and_save_golden.rs
src/: calendar.rs  ics.rs  lib.rs  main.rs
tests/: golden-2025-12-15.ics  golden-2025-12-15.pb
